js262/test/built-ins/NativeErrors/TypeError/constructor.js


/*---
es6id: 19.5.6.1
description: >
  TypeError is a constructor function.
---*/

assert.sameValue(typeof TypeError, 'function', 'typeof TypeError is "function"');
